# Py_Charm_Projects

AnaliticPyton/Homework_1/: Homework_1.ipynb  pyproject.toml
AnaliticPyton/Homework_2/: Homework_2.ipynb  pyproject.toml
AnaliticPyton/Homework_3/Homework_3/: Homework_3.ipynb  pyproject.toml
AnaliticPyton/Homework_4/: Homework_4.ipynb  pyproject.toml
Test_project/: notes.py  task_note.json
notesProject/: main.py  notes.py
