[tool.poetry]
name = "homework-4"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "homework_4"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
jupyterlab = "^4.0.2"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
