[tool.poetry]
name = "homework-3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "homework_3"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
jupyterlab = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
